tests/bad_programs/syntax_errors/reserved_word_as_var1.notc
int main() {
    int void = 1;
}
